--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-EVENT APPLICATION SCREENING AUTOMATION
+#EVENT APPLICATION SCREENING AUTOMATION
 
 An automated screening event application designed to reduce human intervention by using Machine Learning Techniques such as Regression.
 
